từ chối, xác nhận employer